[package]
name = "gamekit"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
categories = ["game-engines", "game-development"]
keywords = ["notan", "game", "engine", "gamedev", "2d"]
readme = "README.md"
homepage = "https://github.com/Nazariglez/gamekit"
repository = "https://github.com/Nazariglez/gamekit"
license = "MIT OR Apache-2.0"
description = "A set of helpers for making games with notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[workspace]
members = ["crates/*"]

[workspace.dependencies]
gk_app = { path = "./crates/gk_app", version = "0.1.0" }
gk_macro = { path = "./crates/gk_macro", version = "0.1.0" }
gk_backend = { path = "./crates/gk_backend", version = "0.1.0" }
gk_gfx = { path = "./crates/gk_gfx", version = "0.1.0" }
gk_math = { path = "./crates/gk_math", version = "0.1.0" }
gk_profile = { path = "./crates/gk_profile", version = "0.1.0" }

serde = { version = "1.0", features = ["serde_derive"] }

log = "0.4.19"
hashbrown = "0.14.0"
anymap = "0.12.1"
arrayvec = "0.7.4"
raw-window-handle = "0.5.2"
bitflags = "2.3.3"
puffin = "0.16.0"

[dependencies]
gk_app.workspace = true
gk_backend.workspace = true
gk_macro.workspace = true
gk_gfx.workspace = true
gk_profile.workspace = true
gk_math.workspace = true

log.workspace = true
anymap.workspace = true
puffin = { workspace = true, optional = true}

simple_logger = "4.2.0"

[features]
default = ["basic", "winit", "wgpu"]
# basic features for most apps
basic = ["limited_memory"]
# uses winit as backend
winit = ["gk_backend/winit"]
# uses wgpu as renderer
wgpu = ["gk_gfx/wgpu"]
# use arrayvec instead of vec when possible
limited_memory = ["gk_app/limited_events"]
# allow serialize and deserialize internal types
serde = ["gk_app/serde", "gk_backend/serde"]
# enable profiling using puffin
puffin = ["dep:puffin", "gk_app/puffin", "gk_gfx/puffin"]