[package]
name = "gk_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
paste = "1.0.12"
#gk_winit = { path = "../gk_winit", version = "0.1.0", optional = true }
gk_core = { path = "../gk_core", version = "0.1.0" }
gk_macro = { path = "../gk_macro", version = "0.1.0" }
indexmap = "2.0.0"
arrayvec = { version = "0.7.4", optional = true }
#gk_web = { path = "../gk_web", version = "0.1.0", optional = true }

[dev-dependencies]
gk_winit = { path = "../gk_winit", version = "0.1.0" }

[features]
default = ["arrayvec", "64_events"]

# Limit the number of listeners per event's type to 64 (avoid using a vector and uses an array instead)
64_events = []
