[package]
name = "gk_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
paste = "1.0.12"
#gk_winit = { path = "../gk_winit", version = "0.1.0", optional = true }
gk_core = { path = "../gk_core", version = "0.1.0" }
gk_macro = { path = "../gk_macro", version = "0.1.0" }
indexmap = "2.0.0"
arrayvec = { version = "0.7.4", optional = true }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
#gk_web = { path = "../gk_web", version = "0.1.0", optional = true }

[dev-dependencies]
gk_winit = { path = "../gk_winit", version = "0.1.0" }
gk_win = { path = "../gk_win", version = "0.1.0" }

[features]
default = ["limited_events"]

# Avoid using a vector per event listener, instead uses a an Array limited to 32 by default. The number can be changed
# passing `GK_LIMIT_EVENTS_TO=N` with the desired size as compilation variable.
limited_events = ["arrayvec"]
