[package]
name = "gk_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
gk_sys.workspace = true

log.workspace = true
parking_lot.workspace = true
hashbrown.workspace = true

futures = "0.3.28"
futures-util = { version = "0.3.28", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["XmlHttpRequest", "XmlHttpRequestEventTarget", "XmlHttpRequestResponseType"] }
js-sys.workspace = true
wasm-bindgen.workspace = true