[package]
name = "gk_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gk_app.workspace = true

log.workspace = true
hashbrown.workspace = true
raw-window-handle.workspace = true
serde = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.28", optional = true }

[features]
empty = []