[package]
name = "gk_gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
gk_app.workspace = true
gk_backend.workspace = true

raw-window-handle.workspace = true
hashbrown.workspace = true
log.workspace = true
arrayvec.workspace = true
wgpu = { version = "0.17.0", optional = true }
pollster = "0.3.0"
bytemuck = "1.13.1"

[features]
webgl = ["wgpu?/webgl"]