[package]
name = "gk_platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gk_app.workspace = true

log.workspace = true
hashbrown.workspace = true
serde = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.28", optional = true }

[features]
default = ["empty"]
empty = []