[package]
name = "gk_win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[dependencies]
gk_app = { version = "0.1.0", path = "../gk_app" }
gk_winit = { version = "0.1.0", path = "../gk_winit", optional = true }

[features]
#default = ["gk_winit"]

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#gk_web = { version = "0.1.0", path = "../gk_web" }
